# suzui-rs

./: '  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  script.sh
.github/workflows/: ci.yml
src/: lib.rs  main.rs  sdl.rs  strings.rs  toggle_detector.rs
src/widgets/: airflow.rs  electrical.rs  engine.rs  flags.rs  fuel_ignition.rs  mod.rs  temperature.rs  throttle.rs  vehicle.rs
