[package]
name = "suzui-rs"
version = "0.1.0"
description = "Suzuki SDL protocol viewer"
authors = ["Shehriyar Qureshi <thatdevsherry@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serialport = "4.7.2"
strum = "0.27.1"
strum_macros = "0.27.1"
clap = { version = "4.5.40", features = ["derive"] }
