[package]
name = "suzui-rs"
version = "2.0.0"
description = "Suzuki SDL protocol viewer"
authors = ["Shehriyar Qureshi <thatdevsherry@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serialport = "4.7.2"
strum = "0.27.1"
strum_macros = "0.27.2"
clap = { version = "4.5.40", features = ["derive"] }

[profile.release]
lto = true
codegen-units=1
panic = "abort"
strip = true
